# football-schedule

./: .gitignore  README.md  pyproject.toml
src/football_schedule/: __init__py  gfl.py  inkplate.py  nfl.py  output.py
