[tool.poetry]
name = "football-schedule"
version = "0.1.0"
description = ""
authors = ["Markus Hermann <hermann.markus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
click = "^8.1.3"
beautifulsoup4 = "^4.11.1"
rich = "^12.5.1"
rich-click = "^1.5.2"
lxml = "^4.9.1"
nfl-data-py = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.poetry.scripts]
football-schedule = "football_schedule.console:main"
todays-gfl-games = "football_schedule.gfl:todays_games"
upcoming-gfl-games = "football_schedule.gfl:upcoming_games"
seattle-games = "football_schedule.nfl:seattle_games"
upcoming-seattle-games = "football_schedule.nfl:upcoming_seattle_games"

[tool.isort]
profile = "hug"
src_paths = ["src", "tests"]
